syntax = "proto3";

option java_multiple_files = true;
option java_package = "truckerlocation";
option java_outer_classname = "TruckerLocationProto";

service TruckerLocationGrpcService {
  rpc GetTruckerLocations (TruckerLocationRequest) returns (stream TruckerLocationReply);
}

message TruckerLocationRequest {
  int64 order_id = 1;
  int64 manager_id = 2;
}

message TruckerLocationReply {
  int64 trucker_id = 1;
  Point point = 2;
}

message Point {
  double latitude = 1;
  double longitude = 2;
}
